Added Basic PHP wrapper for Knawat MP API. #1

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,30 @@
 {
-  "name": "Knawat/Knawat-PHP-SDK",
-  "description": "Knawat-PHP-SDK is used in open source platforms to connect ecommerce store with knawat",
-  "require": {
-    "php": ">=5.3.0"
-  }
+    "name": "knawat/knawat-php-sdk",
+    "description": "A PHP wrapper for the Knawat REST API",
+    "type": "library",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "Dharmesh Patel",
+            "email": "dspatel44@gmail.com"
+        }
+    ],
+    "keywords": [
+        "API",
+        "Knawat",
+        "Dropshipping"
+    ],
+    "require": {
+        "php": ">= 5.4.0",
+        "ext-curl": "*",
+        "ext-json": "*"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Knawat\\": "src/Knawat"
+        }
+    }
 }
