--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,9 +2,9 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ master ]
+    branches: [develop, master]
   pull_request:
-    branches: [ master ]
+    branches: [develop, master]
 
 jobs:
   build:
